# lexica

./: .gitignore  CHANGELOG.md  README.md  lexica.cabal
src/Parser/: Lexica.hs
src/Parser/Lexica/Internal/: HasBuilder.hs  Lex.hs  TMap.hs
test/: Main.hs
