cabal-version:       2.2

name:                lexica
version:             0.1.0.0
synopsis:            An alex-like replacement, but better.
description:         An alex-like replacement, but better.
homepage:            https://github.com/bhurt/lexica#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Brian Hurt
maintainer:          bhurt42@gmail.com
copyright:           2023 Brian Hurt
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
Flag Devel
    Description:    Compile for development (enable warnings and disable optimization)
    Default:        False


library
  hs-source-dirs:      src
  exposed-modules:     Parser.Lexica
                        , Parser.Lexica.Internal.HasBuilder
                        , Parser.Lexica.Internal.Lex
                        , Parser.Lexica.Internal.TMap
  build-depends:       base >= 4.7 && < 5
                        , containers
                        , template-haskell
                        , text
  default-language:    Haskell2010
  if flag(devel)
    ghc-options:       -Wall
                       -Werror
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -O0
  else
    ghc-options:       -O2

test-suite lexica-testsuite
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      RangeTest
    hs-source-dirs:     test
    build-depends:      base >= 4.7 && < 5
                        , HUnit
                        , lexica
    default-language:   Haskell2010
    ghc-options:       -Wall
                       -Werror
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -O0

source-repository head
  type:     git
  location: https://github.com/bhurt/lexica

